[tool.poetry]
name = "crawlera-pyppeteer-example"
version = "0.1.0"
description = "crawlera-headless-proxy Pyppeteer example"
authors = ["Crawlera Team"]
license = "MIT"
homepage = "https://github.com/scrapinghub/crawlera-headless-proxy"
repository = "https://github.com/scrapinghub/crawlera-headless-proxy.git"
documentation = "https://github.com/scrapinghub/crawlera-headless-proxy/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.5"
docker-compose = "^1.25.0"
pyppeteer = "^0.0.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
