[tool.poetry]
name = "zyte-smart-proxy-manager-pyppeteer-example"
version = "0.1.0"
description = "zyte-headless-proxy Pyppeteer example"
authors = ["Zyte"]
license = "MIT"
homepage = "https://github.com/zytedata/zyte-headless-proxy"
repository = "https://github.com/zytedata/zyte-headless-proxy.git"
documentation = "https://github.com/zytedata/zyte-headless-proxy/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
docker-compose = "^1.26.2"
pyppeteer = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
