[tool.poetry]
name = "zyte-smart-proxy-manager-splash-example"
version = "0.1.0"
description = "zyte-proxy-headless-proxy Splash example"
authors = ["Zyte"]
license = "MIT"
homepage = "https://github.com/scrapinghub/zyte-proxy-headless-proxy"
repository = "https://github.com/scrapinghub/zyte-proxy-headless-proxy.git"
documentation = "https://github.com/scrapinghub/zyte-proxy-headless-proxy/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.6"
docker-compose = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
