[tool.poetry]
name = "zyte-smartproxy-headless-proxy-splash-example"
version = "0.1.0"
description = "zyte-smartproxy-headless-proxy Splash example"
authors = ["Zyte"]
license = "MIT"
homepage = "https://github.com/zytedata/zyte-smartproxy-headless-proxy"
repository = "https://github.com/zytedata/zyte-smartproxy-headless-proxy.git"
documentation = "https://github.com/zytedata/zyte-smartproxy-headless-proxy/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.6"
docker-compose = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
